--- a/client/public/assets/i18n/translations/pt.json
+++ b/client/public/assets/i18n/translations/pt.json
@@ -42,6 +42,10 @@
     "edicaoJornal": "ª Edição",
     "infoJornal": "Jornal Oficial da Associação"
   },
+  "historia": {
+    "fundadoresTitle1": "Fundador e Chefe Mundial",
+    "fundadoresTitle2": "Robert e Olave Baden-Powell"
+  },
   "metodoGuidista": {
     "voltar": "Voltar"
   },
