formulario, jornal imagem, aumento desc noticias e title jornal

--- a/client/public/assets/i18n/translations/pt.json
+++ b/client/public/assets/i18n/translations/pt.json
@@ -78,16 +78,17 @@
     "maisInformacoesTexto": "Para mais informações, entre em contacto connosco.",
     "idade": "Idade",
     "concelho": "Concelho",
+    "freguesia": "Freguesia",
     "telefone": "Telefone",
     "nome": "Nome",
     "assunto": "Assunto",
-    "email": "Email",
+    "email": "E-mail",
     "mensagem": "Mensagem",
     "recolhaDadosTexto": "A recolha destes dados pessoais tem apenas como finalidade o pedido de contacto por parte da Associação Guias de Portugal. Caso não autorize a recolha dos dados pessoais, poderá contactar-nos através de meios alternativos, nomeadamente utilizando o endereço de email ",
     "recolhaDadosTexto2": "Para mais informações, consulte a nossa ",
     "politicaDadosPessoais": "Política de Dados Pessoais.",
     "campoObrigatorio": "Campo obrigatório",
-    "erroEmailInvalido": "Email inválido",
+    "erroEmailInvalido": "E-mail inválido",
     "botaoEnviar": "Enviar",
     "envioSucesso": "Mensagem enviada!",
     "envioErro": "Ocorreu um erro, por favor tente de novo."
