--- a/client/public/assets/i18n/translations/en.json
+++ b/client/public/assets/i18n/translations/en.json
@@ -78,7 +78,7 @@
     "maisInformacoesTexto": "For more information, please contact us.",
     "idade": "Age",
     "concelho": "County",
-    "freguesia": "Parish",
+    "freguesia": "Location",
     "telefone": "Telephone",
     "nome": "Name",
     "assunto": "Subject",
